<resources>
    <string name="app_name">ContentProviders</string>
    <string name="consultar">Consultar</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="llamadas">Llamadas</string>
    <string name="password">contrasena</string>
    <string name="username">usuario</string>
    <string name="Introducedatosclientes">Introduce los datos del cliente</string>
    <string name="email">email</string>
    <string name="confirmar">Confirmar</string>
</resources>
